raffia/tests/error/scss/at-rule/forward/hide-nothing.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `;`
  ┌─ hide-nothing.scss:1:18
  │
1 │ @forward "a" hide;
  │                  ^


